<resources>

    <string name="facebook_app_id" translatable="false">1631427560285640</string>


    <string name="app_name">Fast Charger</string>
    <string name="app_owner">VN Studio</string>
    <string name="owner_email">VN.studio@android.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">All Settings</string>
    <string name="lock_settings">Settings</string>

    <string name="action_rate_app">Rate 5*</string>
    <string name="action_share_app">Share App</string>
    <string name="action_more_app">More App</string>
    <string name="q_fast_charging">Do You Want Fast Charging?</string>
    <string name="rate_five_star">Please rate 5 star for us, Tks!!!</string>

    <string name="setting_group_function">Auto-Functions while using this app</string>
    <string name="function_clear_ram">RAM Booster</string>
    <string name="function_off_internet">Turn off internet</string>
    <string name="function_min_brightness">Reduce Brightness</string>
    <string name="function_off_bluetooth">Bluetooth Off</string>
    <string name="function_off_rotate">Screen Rotate Off</string>
    <string name="function_off_wifi">Wifi Off</string>

    <string name="setting_group_trigger">Action when plug-in charger</string>
    <string name="trigger_no_run">Do not run app when plug charger</string>
    <string name="trigger_ask_run">Show ask dialog when plug charger</string>
    <string name="trigger_auto_run">Auto run app and optimize when plug charger</string>
    <string name="charging">Charging</string>
    <string name="percent" formatted="false">%d%%</string>
    <string name="setting_group_other">Auto-Functions while fast charging</string>
    <string name="exit_on_unplug">Close running apps while charging</string>
    <string name="state_on_lock">Show Charging Status (Lock Screen)</string>
    <string name="restore_on_exit">Auto restore state when unplug charger</string>

    <string name="time_left">Please wait until full charge</string>
    <string name="battery_full">Fully charged</string>
    <string name="time_left_main">Please wait until full charge</string>
    <string name="time_estimating">estimating</string>
    <string name="time_charging">Battery is charging</string>
    <string name="time_left_value">%1$sh%2$sm</string>

    <string name="title_activity_lock_setting">Setting Lock screen</string>

    <string name="lock_setting_toggle">Turn on lock screen by fast charger lite</string>

    <string name="optimize_start">OPTIMIZE</string>
    <string name="optimize_running">Optimizing…</string>
    <string name="optimize_done">Done</string>
    <string name="slide_to_unlock">Slide To Unlock</string>
    <string name="great">AWESOME!!!</string>
    <string name="great_content">Your device is ready\nFor fast charging mode</string>

    <string name="nof_title_not_charging">Battery is not charging</string>
    <string name="nof_title_charging">Battery is charging</string>
    <string name="nof_title_low">Battery is low</string>

    <string name="nof_fast_charge_lite_optimized">Fast Charge Optimized</string>
    <string name="nof_fast_charge_lite_unoptimized">Fast Charge UnOptimized</string>
    <string name="nof_fast_charge">Click here for fast charging</string>

    <string name="ask_bt_yes">Yes</string>
    <string name="ask_bt_no">No</string>
    <string name="ask_nomal_mode">Normal Charging</string>
    <string name="ask_fast_mode">Fast Charging</string>

    <string name="ask_permission">Click enable/on allow write systems setting</string>
    <string name="download">Download</string>
    <string name="cp_hot_apps">More apps</string>
    <string name="lbl_add_app">More apps</string>

    <string name="hint_optimize">Click here to increase\ncharging speed</string>
    <string name="hint_setting">Click here to change\ncharging options</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_rate_app">Please rate 5* for us!</string>
    <string name="lbl_later">Later</string>
    <string name="lbl_rate">Rate</string>
    <string name="sms_thank_you_rate">Please rate 5* for us, thank you very much</string>
    <string name="lbl_sponsored">Sponsored</string>
    <string name="lbl_battery_save">Doctor Saver - Batery Saver</string>
    <string name="advertisement">Advertisement</string>

    <string name="optimize">Optimize</string>
    <string name="full_battery_on_exit">Alert when the battery is full</string>
    <string name="tip_optimize">Touch “OPTIMIZE” to put your device in the best status to be charged faster.</string>
    <string name="function_off_sync">Sync Off</string>
    <string name="tip_done">GREAT! Now you can plug-in charger and enjoy fast charging mode.</string>
    <string name="tip_optimizting">Please wait until optimizing done.</string>
    <string name="rate_us"  >Rate 5 stars for us if you like</string>
</resources>
