<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/action_settings"
            android:textColor="@color/color_arc"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/btnRate"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_rate_settings" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="#6f000000"
                android:gravity="center_vertical|left"
                android:paddingLeft="10dp"
                android:text="@string/setting_group_trigger"
                android:textSize="20sp"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/trigger_on_plug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/no_run"
                    style="@style/Settings.RadioBox"
                    android:text="@string/trigger_no_run" />

                <RadioButton
                    android:id="@+id/ask_run"
                    style="@style/Settings.RadioBox"
                    android:text="@string/trigger_ask_run" />

                <RadioButton
                    android:id="@+id/auto_run"
                    style="@style/Settings.RadioBox"
                    android:text="@string/trigger_auto_run" />
            </RadioGroup>

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:background="@drawable/title_right"
                android:gravity="center_vertical|start"
                android:padding="8dp"
                android:text="@string/setting_group_function"
                android:textColor="#000" />

            <CheckBox
                android:id="@+id/clear_ram"
                style="@style/Settings.CheckBox"
                android:drawableLeft="@drawable/ic_ram"
                android:text="@string/function_clear_ram" />

            <CheckBox
                android:id="@+id/off_internet"
                style="@style/Settings.CheckBox"
                android:drawableLeft="@drawable/ic_internet"
                android:text="@string/function_off_internet" />

            <CheckBox
                android:id="@+id/off_bluetooth"
                style="@style/Settings.CheckBox"
                android:drawableLeft="@drawable/ic_bluetooth"
                android:text="@string/function_off_bluetooth" />

            <CheckBox
                android:id="@+id/off_rotate"
                style="@style/Settings.CheckBox"
                android:drawableLeft="@drawable/ic_rotate"
                android:text="@string/function_off_rotate" />

            <CheckBox
                android:id="@+id/off_sync"
                style="@style/Settings.CheckBox"
                android:drawableLeft="@drawable/ic_sync"
                android:text="@string/function_off_sync" />

            <CheckBox
                android:id="@+id/min_brightness"
                style="@style/Settings.CheckBox"
                android:drawableLeft="@drawable/ic_sun"
                android:text="@string/function_min_brightness" />


            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/title_left"
                android:gravity="center|right"
                android:padding="8dp"
                android:text="@string/setting_group_other"
                android:textColor="#000" />

            <CheckBox
                android:id="@+id/state_on_lock"
                style="@style/Settings.CheckBox"
                android:text="@string/state_on_lock" />

            <CheckBox
                android:id="@+id/exit_on_unplug"
                style="@style/Settings.CheckBox"
                android:text="@string/exit_on_unplug" />

            <CheckBox
                android:id="@+id/restore_on_exit"
                style="@style/Settings.CheckBox"
                android:text="@string/restore_on_exit"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/full_battery_on_exit"
                style="@style/Settings.CheckBox"
                android:text="@string/full_battery_on_exit"
                android:visibility="gone" />
            <LinearLayout
                android:id="@+id/frame_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>
