<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout_xxx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_rate"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_title_dialog_rate">

            <TextView
                android:id="@+id/tvTitleDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:lines="2"
                android:maxLines="2"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/rate_us"
                android:textColor="#fff"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/tvTitleDialog"
                android:src="@drawable/ic_favorite_white_36dp"
                android:visibility="gone" />
        </RelativeLayout>

        <RatingBar
            android:id="@+id/mRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleDialog"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/b7"
            android:numStars="5"
            android:progressTint="@color/b7"
            android:secondaryProgressTint="@color/b7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_xxx"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnLater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="?android:selectableItemBackground"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="8dp"
                android:text="@string/lbl_later"
                android:textColor="#c4c4c4"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/btnRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="?android:selectableItemBackground"
                android:paddingBottom="8dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="8dp"
                android:text="@string/lbl_rate"
                android:textColor="#65CC65"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>