<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:descendantFocusability="blocksDescendants"
    android:gravity="top">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/float_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:padding="10dp"


                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="58dp"

                android:layout_marginRight="10dp"


                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:gravity="left|center"

                android:text="@string/q_fast_charging"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/lay_out_rua_ten_lua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/lay_out_rua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/im_sen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="10dp"
                        android:src="@drawable/ask_sen" />



                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lay_out_tenlua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/im_rocket"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="10dp"
                        android:src="@drawable/ask_rocket" />



                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lay_out_btask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lay_out_rua_ten_lua"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:layout_weight="1"      android:padding="10dp"
                    android:background="@drawable/btn_no"
                    android:text="@string/ask_nomal_mode"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/btn_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:padding="10dp"    android:gravity="center"
                    android:background="@drawable/btn_yes"
                    android:text="@string/ask_fast_mode"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frame_ads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lay_out_btask"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:orientation="vertical"/>





        </RelativeLayout>

    </ScrollView>
</RelativeLayout>