<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7d6e6e6e">

    <com.vn.viewcustem.SlidePanelCustem
        android:id="@+id/layout_lock_sliding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent">

            <LinearLayout
                android:id="@+id/action_bar_lock"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@mipmap/ic_launcher"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/app_name"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/btn_settings"
                    android:layout_width="31dp"
                    android:layout_height="31dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/btn_setting"
                    android:padding="5dp"
                    android:visibility="visible" />
            </LinearLayout>


            <DigitalClock
                android:id="@+id/dc_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/action_bar_lock"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:format12Hour="@null"
                android:format24Hour="MMM dd, yyyy k:mm"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dc_time"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:text="Thứ 4, 5 th 4"
                android:textSize="19sp" />

            <com.vn.viewcustem.CircleWaveView
                android:id="@+id/progress_circle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/tv_date"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:glowColor="#20cab0"
                app:strokeColor="#FFFFFF"
                app:strokeSize="2dp"
                app:waterColor="#F29E84" />

            <LinearLayout
                android:id="@+id/battery_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_date"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_progess_battery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:text="10%"
                    android:textSize="30sp" />

                <com.vn.viewcustem.BatteryView
                    android:id="@+id/battery_view"
                    android:layout_width="20dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    app:bv_color="#ffffff"
                    app:bv_percent="10" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/time_remain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/battery_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/btn_time_remain"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/thunder_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_flash" />

                <TextView
                    android:id="@+id/tv_time_remain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:lines="1"
                    android:text="@string/time_charging"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_remain_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:lines="1"
                    android:text="@string/time_estimating"
                    android:textColor="#42f105"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/slide_2_unlock_container"
                android:layout_centerHorizontal="true">

            </ScrollView>

            <RelativeLayout
                android:id="@+id/slide_2_unlock_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:padding="10dp">

                <TextView
                    android:id="@+id/slide_2_unlock_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/slide_to_unlock"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>
    </com.vn.viewcustem.SlidePanelCustem>
</RelativeLayout>

